--- a/main.ipynb
+++ b/main.ipynb
@@ -2,151 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import accuracy_score, precision_score, classification_report\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load dataset"
+    "from sklearn.metrics import accuracy_score, precision_score\n",
+    "from sklearn.utils import shuffle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"Imagens_Medicas/Trabalho_Imagens_Medicas/histology_slides\"  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load images"
+    "dataset_path = \"Imagens_Medicas/Trabalho_Imagens_Medicas/histology_slides\"  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_images_from_folder(folder):\n",
-    "    images = []\n",
-    "    labels = []\n",
-    "    for subdir, dirs, files in os.walk(folder):\n",
+    "def load_data(dataset_path, img_size=(224, 224)):\n",
+    "    X = []\n",
+    "    y = []\n",
+    "    for root, dirs, files in os.walk(dataset_path):\n",
     "        for file in files:\n",
-    "            if file.endswith('.tif'):\n",
-    "                label = os.path.basename(subdir)\n",
-    "                img_path = os.path.join(subdir, file)\n",
-    "                img = cv2.imread(img_path, cv2.IMREAD_GRAYSCALE)\n",
-    "                img = cv2.resize(img, (128, 128))  \n",
-    "                images.append(img.flatten())  \n",
-    "                labels.append(label)\n",
-    "    return np.array(images), np.array(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, y = load_images_from_folder(path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Encode Labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_encoder = LabelEncoder()\n",
-    "y_encoded = label_encoder.fit_transform(y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Train and Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y_encoded, test_size=0.2, random_state=42, stratify=y_encoded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = {\n",
-    "    \"SVM\": make_pipeline(StandardScaler(), SVC(kernel='linear', C=1.0, random_state=42)),\n",
-    "    \"KNN\": make_pipeline(StandardScaler(), KNeighborsClassifier(n_neighbors=5)),\n",
-    "    \"Random Forest\": RandomForestClassifier(n_estimators=100, random_state=42),\n",
-    "    \"Logistic Regression\": make_pipeline(StandardScaler(), LogisticRegression(max_iter=1000, random_state=42)),\n",
-    "    \"Naive Bayes\": GaussianNB()\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = {}\n",
-    "for name, model in models.items():\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
+    "            if file.endswith('.png'):\n",
+    "                img_path = os.path.join(root, file)\n",
+    "                img = cv2.imread(img_path)\n",
+    "                img = cv2.resize(img, img_size)\n",
+    "                X.append(img)\n",
+    "                \n",
+    "                # Extract label from the folder name (assuming each subdirectory is a label)\n",
+    "                label = os.path.basename(root)\n",
+    "                y.append(label)\n",
     "    \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    precision = precision_score(y_test, y_pred, average='weighted')\n",
-    "    \n",
-    "    results[name] = {\n",
-    "        \"Accuracy\": accuracy,\n",
-    "        \"Precision\": precision\n",
-    "    }\n",
-    "    \n",
-    "    print(f\"{name} Model\")\n",
-    "    print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
-    "    print(f\"Precision: {precision * 100:.2f}%\")\n",
-    "    print(\"Classification Report:\")\n",
-    "    print(classification_report(y_test, y_pred, target_names=label_encoder.classes_))\n",
-    "    print(\"-\" * 50)"
+    "    X = np.array(X)\n",
+    "    y = np.array(y)\n",
+    "    return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_to_int(labels):\n",
+    "    unique_labels = list(set(labels))\n",
+    "    label_dict = {label: i for i, label in enumerate(unique_labels)}\n",
+    "    y_int = np.array([label_dict[label] for label in labels])\n",
+    "    return y_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_size = (128, 128)\n",
+    "X, y = load_data(dataset_path, img_size)\n",
+    "y = label_to_int(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "With n_samples=0, test_size=0.2 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m X, y \u001b[38;5;241m=\u001b[39m shuffle(X, y)\n\u001b[0;32m----> 2\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_test_split\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/utils/_param_validation.py:213\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    208\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m    209\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m    210\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    211\u001b[0m         )\n\u001b[1;32m    212\u001b[0m     ):\n\u001b[0;32m--> 213\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    214\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    215\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[1;32m    217\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[1;32m    219\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[1;32m    220\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    221\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    222\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[1;32m    223\u001b[0m     )\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/model_selection/_split.py:2780\u001b[0m, in \u001b[0;36mtrain_test_split\u001b[0;34m(test_size, train_size, random_state, shuffle, stratify, *arrays)\u001b[0m\n\u001b[1;32m   2777\u001b[0m arrays \u001b[38;5;241m=\u001b[39m indexable(\u001b[38;5;241m*\u001b[39marrays)\n\u001b[1;32m   2779\u001b[0m n_samples \u001b[38;5;241m=\u001b[39m _num_samples(arrays[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m-> 2780\u001b[0m n_train, n_test \u001b[38;5;241m=\u001b[39m \u001b[43m_validate_shuffle_split\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2781\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_samples\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdefault_test_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.25\u001b[39;49m\n\u001b[1;32m   2782\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2784\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m shuffle \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[1;32m   2785\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m stratify \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/model_selection/_split.py:2410\u001b[0m, in \u001b[0;36m_validate_shuffle_split\u001b[0;34m(n_samples, test_size, train_size, default_test_size)\u001b[0m\n\u001b[1;32m   2407\u001b[0m n_train, n_test \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(n_train), \u001b[38;5;28mint\u001b[39m(n_test)\n\u001b[1;32m   2409\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n_train \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m-> 2410\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   2411\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWith n_samples=\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m, test_size=\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m and train_size=\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m, the \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2412\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresulting train set will be empty. Adjust any of the \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2413\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maforementioned parameters.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(n_samples, test_size, train_size)\n\u001b[1;32m   2414\u001b[0m     )\n\u001b[1;32m   2416\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m n_train, n_test\n",
+      "\u001b[0;31mValueError\u001b[0m: With n_samples=0, test_size=0.2 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters."
+     ]
+    }
+   ],
+   "source": [
+    "X, y = shuffle(X, y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -155,9 +118,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Summary of Model Performance:\")\n",
-    "for name, metrics in results.items():\n",
-    "    print(f\"{name} - Accuracy: {metrics['Accuracy'] * 100:.2f}%, Precision: {metrics['Precision'] * 100:.2f}%\")"
+    "def build_cnn(input_shape):\n",
+    "    model = tf.keras.models.Sequential([\n",
+    "        tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=input_shape),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Conv2D(128, (3, 3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Flatten(),\n",
+    "        tf.keras.layers.Dense(128, activation='relu'),\n",
+    "        tf.keras.layers.Dense(len(np.unique(y)), activation='softmax')\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model = build_cnn(X_train.shape[1:])\n",
+    "cnn_model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_loss, cnn_accuracy = cnn_model.evaluate(X_test, y_test)\n",
+    "cnn_predictions = np.argmax(cnn_model.predict(X_test), axis=-1)\n",
+    "cnn_precision = precision_score(y_test, cnn_predictions, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_flat = X_train.reshape(X_train.shape[0], -1)\n",
+    "X_test_flat = X_test.reshape(X_test.shape[0], -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(X_train_flat, y_train)\n",
+    "knn_predictions = knn.predict(X_test_flat)\n",
+    "knn_accuracy = accuracy_score(y_test, knn_predictions)\n",
+    "knn_precision = precision_score(y_test, knn_predictions, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf.fit(X_train_flat, y_train)\n",
+    "rf_predictions = rf.predict(X_test_flat)\n",
+    "rf_accuracy = accuracy_score(y_test, rf_predictions)\n",
+    "rf_precision = precision_score(y_test, rf_predictions, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "lr.fit(X_train_flat, y_train)\n",
+    "lr_predictions = lr.predict(X_test_flat)\n",
+    "lr_accuracy = accuracy_score(y_test, lr_predictions)\n",
+    "lr_precision = precision_score(y_test, lr_predictions, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb = GaussianNB()\n",
+    "nb.fit(X_train_flat, y_train)\n",
+    "nb_predictions = nb.predict(X_test_flat)\n",
+    "nb_accuracy = accuracy_score(y_test, nb_predictions)\n",
+    "nb_precision = precision_score(y_test, nb_predictions, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"CNN - Accuracy: {cnn_accuracy:.4f}, Precision: {cnn_precision:.4f}\")\n",
+    "print(f\"KNN - Accuracy: {knn_accuracy:.4f}, Precision: {knn_precision:.4f}\")\n",
+    "print(f\"Random Forest - Accuracy: {rf_accuracy:.4f}, Precision: {rf_precision:.4f}\")\n",
+    "print(f\"Logistic Regression - Accuracy: {lr_accuracy:.4f}, Precision: {lr_precision:.4f}\")\n",
+    "print(f\"Naive Bayes - Accuracy: {nb_accuracy:.4f}, Precision: {nb_precision:.4f}\")"
    ]
   }
  ],
